| Bug #59498 | div function broken in mysql-trunk | ||
|---|---|---|---|
| Submitted: | 14 Jan 2011 12:14 | Modified: | 29 Jan 2011 23:06 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Data Types | Severity: | S1 (Critical) |
| Version: | 5.6.2 5.5 | OS: | Any |
| Assigned to: | Tor Didriksen | CPU Architecture: | Any |
| Tags: | regression | ||
[14 Jan 2011 12:14]
Shane Bester
[14 Jan 2011 14:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128769 3248 Tor Didriksen 2011-01-14 Bug #59498 div function broken in mysql-trunk @ mysql-test/r/func_math.result New test case. @ mysql-test/t/func_math.test New test case. @ sql/item_func.cc Check for null before converting value to my_decimal.
[14 Jan 2011 15:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128807 3249 Tor Didriksen 2011-01-14 Bug #59498 div function broken in mysql-trunk @ mysql-test/r/func_math.result New test case. @ mysql-test/t/func_math.test New test case. @ sql/item_func.cc Check for null before converting value to my_decimal.
[14 Jan 2011 15:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128813 3511 Tor Didriksen 2011-01-14 [merge] Merge Bug #59498 from 5.5
[14 Jan 2011 15:37]
Tor Didriksen
pushed to 5.5 and trunk
[14 Jan 2011 20:55]
Bugs System
Pushed into mysql-trunk 5.6.2 (revid:tor.didriksen@oracle.com-20110114153619-qwbd2gu5pn0s6e3k) (version source revid:tor.didriksen@oracle.com-20110114153619-qwbd2gu5pn0s6e3k) (merge vers: 5.6.2) (pib:24)
[14 Jan 2011 20:55]
Bugs System
Pushed into mysql-5.5 5.5.10 (revid:tor.didriksen@oracle.com-20110114140337-5zz3do0b12fxup3d) (version source revid:tor.didriksen@oracle.com-20110114140337-5zz3do0b12fxup3d) (merge vers: 5.5.10) (pib:24)
[19 Jan 2011 1:35]
Paul DuBois
Bug does not appear in released versions. No changelog entry needed.
[20 Feb 2011 8:31]
MySQL Verification Team
it's still broken in recent 5.5 and trunk. select (1.175494351E-37 div 1.7976931348623157E+308); i'm filing a new bug about it in oracle bugdb.
[20 Feb 2011 8:39]
MySQL Verification Team
oracle bug 11792200
