Bug #59498 div function broken in mysql-trunk